<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- username -->
        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner"
            android:hint="Username"
            android:inputType="text"
            android:padding="10dp" />

        <!-- password -->
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corner"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_corner_blue"
            android:padding="12dp"
            android:text="Login" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_corner_blue"
            android:gravity="center"
            android:text="SIGNUP"
            android:textSize="16dip" />

    </LinearLayout>

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="EMOTE"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="The Emotional Tracker"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>