<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/emote_list_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:id="@+id/filter_layout">

        <TextView
            android:id="@+id/text_add_emote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Past Emotes"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <CheckBox
                android:id="@+id/check_box_show_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:text="Show Friends"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-condensed"
                android:textSize="15sp"
                />


        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/filter_layout"
        app:layout_constraintBottom_toTopOf="@id/emote_list_view"
        android:layout_marginTop="15dp"
        android:layout_weight="1" />

    <ListView
        android:id="@+id/emote_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar"
        app:layout_constraintVertical_bias="0.39" />

</androidx.constraintlayout.widget.ConstraintLayout>