<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="Profile" />

    <item
        android:id="@+id/navigation_list_emote"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="Emote History" />

    <item
        android:id="@+id/navigation_add_emote"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="Add Emote" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="Map" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="Friends" />

</menu>
