<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/emote_list_item_border"
    android:layout_margin="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/emoticon"
            android:scaleType="fitXY"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/emote_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="Emote"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="username"
        android:layout_alignParentRight="true"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="Emote"
        android:layout_alignParentRight="true"
        android:layout_below="@id/user_name"
        android:textSize="15sp"/>


</RelativeLayout>